--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <div class="row-1">
                     <div class="image">
                         <div class="img">
-                            <img src="Images/Anshika.jpeg" alt="Portfolio photo" width="100">
+                            <img src="Anshika.jpeg" alt="Portfolio photo" width="100">
                         </div>
                     </div>
                     <div class="me">
