--- a/index.html
+++ b/index.html
@@ -347,8 +347,9 @@
           <a class="cert-card" href="https://www.cert.shapeai.tech/verify/Z1K0VLd" target="_blank"><img src="Images/ShapeAIedit.png"></a>
           <a class="cert-card" href="Images/App1.jpg" target="_blank"><img src="Images/App1edit.jpg"></a>
           <a class="cert-card" href="Images/App2.jpg" target="_blank"><img src="Images/App2edit.jpg"></a>
-          <a class="cert-card" href="Images/aws.jpg" target="_blank"><img src="Images/aws.jpg"></a>
-          <a class="cert-card" href="Images/coursera.jpg" target="_blank"><img src="Images/coursera.jpg"></a>
+          <a class="cert-card" href="https://www.credly.com/go/iKGuhWSG" target="_blank"><img src="Images/aws.jpg"></a>
+          <a class="cert-card" href="https://coursera.org/verify/specializat
+ion/JLYEBL7578LY" target="_blank"><img src="Images/coursera.jpg"></a>
         </div>
       </section>
 <br><br><br><br><br><br><br><br><br><br><br><br>
